--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "email-validator": "^2.0.4",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
-    "mongoose": "^5.9.6"
+    "mongoose": "^5.9.6",
+    "password-validator": "^5.0.3"
   }
 }
