--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
   },
   "homepage": "https://github.com/SeannyPhoenix/ga-sei-09-project-1#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "connect-mongo": "^3.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "google-books-search": "^0.3.1",
     "mongoose": "^5.9.6"
   }
